--- a/SelfLearningApiProject/appsettings.json
+++ b/SelfLearningApiProject/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=COMPUTER000193;Database=SelfLearningDbDatabase;Trusted_Connection=True;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=COMPUTER000193;Database=SelfLearningDbDatabase;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=COMPUTER000255;Database=SelfLearningDbDatabase;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
 
