--- a/SelfLearningApiProject/appsettings.json
+++ b/SelfLearningApiProject/appsettings.json
@@ -9,6 +9,11 @@
   "ConnectionStrings": {
     //"DefaultConnection": "Server=COMPUTER000193;Database=SelfLearningDbDatabase;Trusted_Connection=True;TrustServerCertificate=True;"
     "DefaultConnection": "Server=COMPUTER000255;Database=SelfLearningDbDatabase;Trusted_Connection=True;TrustServerCertificate=True;"
-  }
+  },
+    "JwtSettings": {
+      "Key": "super-secret-key-please-change-to-env-or-vault-1234567890",
+      "Issuer": "MyApp",
+      "Audience": "MyAppClients",
+      "DurationMinutes": "60"
+    }
 }
-
