for authentication now we are cheking user and password from Databse and new controller and services is added for user

--- a/SelfLearningApiProject/appsettings.json
+++ b/SelfLearningApiProject/appsettings.json
@@ -12,8 +12,8 @@
   },
     "JwtSettings": {
       "Key": "super-secret-key-please-change-to-env-or-vault-1234567890",
-      "Issuer": "MyApp",
-      "Audience": "MyAppClients",
+      "Issuer": "AbhayAPP",
+      "Audience": "AbhayClients",
       "DurationMinutes": "60"
     }
 }
