file upload and download functionality added. cache is now added (IN memory cache) and redish cache soft delete functionality added.

--- a/SelfLearningApiProject/appsettings.json
+++ b/SelfLearningApiProject/appsettings.json
@@ -10,10 +10,13 @@
     //"DefaultConnection": "Server=COMPUTER000193;Database=SelfLearningDbDatabase;Trusted_Connection=True;TrustServerCertificate=True;"
     "DefaultConnection": "Server=COMPUTER000255;Database=SelfLearningDbDatabase;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-    "JwtSettings": {
-      "Key": "super-secret-key-please-change-to-env-or-vault-1234567890",
-      "Issuer": "AbhayAPP",
-      "Audience": "AbhayClients",
-      "DurationMinutes": "60"
-    }
+  "JwtSettings": {
+    "Key": "super-secret-key-please-change-to-env-or-vault-1234567890",
+    "Issuer": "AbhayAPP",
+    "Audience": "AbhayClients",
+    "DurationMinutes": "60"
+  },
+  "FileSettings": {
+    "UploadPath": "Uploads"
+  }
 }
