Rate limiting is implimented for reduce requests from user. Serilog is implimented in the ilogger custom middleware for store all log into Log file Responce Wraping in implimented for proper json when response is generated and for similer format for requests. Versioning is in progress

--- a/SelfLearningApiProject/appsettings.json
+++ b/SelfLearningApiProject/appsettings.json
@@ -18,5 +18,20 @@
   },
   "FileSettings": {
     "UploadPath": "Uploads"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/System Event log-.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] {Message}{NewLine}{Exception}"
+        }
+      }
+    ]
   }
+
 }
