--- a/SelfLearningApiProject/SelfLearningApiProject.csproj
+++ b/SelfLearningApiProject/SelfLearningApiProject.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
 	<PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
+	<PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
 	<PackageReference Include="AutoMapper" Version="12.0.1" />
 	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 	<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
